facut clase pentru fiecare fel de interactiune, e mai ok